[package]
name = "hopper"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"

[dependencies]
anyhow = "1.0"
confy = "0.4"
console = "0.15.0"
dialoguer = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
