[package]
name = "hopper"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"
authors = [
	"Emma Tebibyte <emma@tebibyte.media>",
	"Marceline Cramer <mars@tebibyte.media>"
	"Spookdot <https://git.tebibyte.media/spookdot/>"
]

[dependencies]
arg = "0.4.1"
c-main = "1.0.1"
console = "0.15.0"
curl = "0.4.44"
dialoguer = "0.9.0"
futures-util = "0.3.18"
indicatif = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.7.3"
xdg = "2.4.1"
yacexits = "0.1.3"
